# TIcpp

./: aufgabe5.7z  aufgabe5.cbp  aufgabe5.cscope_file_list  aufgabe5.depend
.metadata/: version.ini
Aufgabe3/: Aufgabe3.depend  Aufgabe3.layout  TLibrary.h  TLibraryPool.cpp  TLibraryPool.h  TLoan.cpp  TLoan.h  TMedium.cpp  TMedium.h  TPerson.cpp  TPerson.h  Tlibrary.cpp
TIcpp_Buecherei/: CMakeLists.txt  TAddress.cpp  TAddress.h  TDate.cpp  TDate.h  TLibrary.cpp  TLibrary.h  TLocation.cpp  TLocation.h  TMedium.cpp  TMedium.h  TPerson.cpp  TPerson.h  TTime.cpp  TTime.h  main.cpp
TIcpp_ueb1/: .cproject  .project  CMakeLists.txt  TDate.cpp  Ueb1.cpp  tdate.h
TIcpp_ueb1/Debug/: TIcpp  TTime.d  Ueb1.d  makefile  subdir.mk
TIcpp_ueb2/: .project  CMakeLists.txt  TAddress.cpp  TDate.cpp  TLocation.cpp  TPerson.cpp  TTime.cpp  Ueb2.cpp  taddress.h  ttime.h
TIcpp_ueb2/Debug/: TAddress.d  TDate.d  TLocation.d  makefile  subdir.mk
TIcpp_ueb3/: CMakeLists.txt  TDate.cpp  tdate.h  tlocation.h  tperson.h
Vorlesung/: Vorlesung040517.cpp  Vorlesung040517_2.cpp  Vorlesung040517_3.cpp
aufgabe04/Aufgabe3/: Aufgabe3.cbp  Aufgabe3.layout  TLibrary.h  TLibraryPool.cpp  TLoan.h  TMedium.cpp  TMedium.h  TPerson.cpp  TPerson.h  Tlibrary.cpp  main.cpp
aufgabe1/: CMakeLists.txt  Library.cbp  Library.layout  main.cpp  tdate.cpp  tdate.h  ttime.cpp  ttime.h
aufgabe5/: aufgabe5.depend  aufgabe5.layout
aufgabe6/: aufgabe5.cbp  aufgabe5.depend  aufgabe5.layout
aufgabe7/: aufgabe5.cbp  aufgabe5.depend  aufgabe5.layout  aufgabe7.depend  aufgabe7.layout  data.xml
aufgabe7/src/: what.c  (+15 more)
(+107 files in other folders)
